Replace deprecated methods related to new instances